welcome.lessons.welcome.loopwhile.WhileMoria.scala.error
Balin:11: error: type mismatch;
 found   : Unit
 required: Boolean
if (estSurBiscuit() && prendBiscuit() & PorteBiscuit() ) {
                                   ^